--- a/app/views/shared/_sent_wink.html.erb
+++ b/app/views/shared/_sent_wink.html.erb
@@ -1,2 +1,2 @@
 <%= link_to "Wink already sent", '#', 
-	class: "btn btn-primary btn-large disabled" %>
+	class: "btn btn-primary btn-small disabled" %>
