--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,13 @@
-div.private_message {
+div.profile {
+	margin: 5px 0 10px 0;
+}
 
+div.profile#type_1 {
+	background-color: #fff;
+}
+
+div#type_0 {
+	background-color: red;
 }
 
 h3.message {
@@ -10,4 +18,13 @@ h3.message {
 
 h3.expanded {
 	background-image: url(close.png);
+}
+
+textarea {
+	width: 500px;
+	height: 200px;
+}
+
+span.user_name {
+	
 }
