--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           <%= link_to "Dating- Home", root_url, class: "brand" %>
           <div class="container nav-collapse">
             <ul class="nav">
-                <li><%= link_to "Profiles", profiles_path %></li>
+                <li><%= link_to "View members!", profiles_path %></li>
                 <li><%= link_to "Contact", contact_url %></li>
                 <li><%= link_to "Blog", '#'  %></li>
             </ul>
@@ -46,7 +46,17 @@
               <% if signed_in? %>
                 <li><% if !current_user.profile.nil? %>
                     <%= link_to "Messages", private_messages_path %></li>
-                  <li><%= link_to "Edit Profile", edit_profile_path(current_user.profile) %></li>
+                  <li class="dropdown" id="profile">
+                    <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" 
+                      href="path/to/page.html">
+                      Profile
+                      <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <%= link_to "View your profile", current_user.profile %>
+                      <%= link_to "Edit your profile", edit_profile_path(current_user.profile) %>
+                    </ul>
+                  </li>
                     
                     <% else %>
                     <li><%= link_to "Create a Profile", new_profile_path %></li>
