--- a/app/views/shared/_send_wink.html.erb
+++ b/app/views/shared/_send_wink.html.erb
@@ -1,3 +1,3 @@
 <%= button_to "Send Wink", { controller: "winks", action: "create", 
-	profile_id: object.id }, { method: :post, class: "btn btn-primary btn-large",
+	profile_id: object.id }, { method: :post, class: "btn btn-primary btn-small",
 		 remote: true } %>
