--- a/app/views/winks/create.js.erb
+++ b/app/views/winks/create.js.erb
@@ -1,1 +1,1 @@
-$('div.new_wink').fadeOut().html("<%=j render 'shared/sent_wink', object: @profile %>").fadeIn();
+$('span.new_wink').fadeOut().html("<%=j render 'shared/sent_wink', object: @profile %>").fadeIn();
