--- a/app/views/private_messages/index.html.erb
+++ b/app/views/private_messages/index.html.erb
@@ -1,19 +1,16 @@
-<h2>All conversations</h2>
+<% if @messages.empty? %>
+	<h2>:( You don't have any conversations in your inbox.  Why don't you message someone?</h2>
+<% else %>
 
-<% unless @received_messages.empty? %>
-	<h2>All received messages</h2>
-	<ul class="received_messages">
-	<% @received_messages.each do |f| %>
-		<li><%= f.title %>: <%= link_to truncate(f.body, length: 30), f %></li>
+<h2>All Conversations:</h2>
+<ul class="conversations">
+<% @received_messages.each do |f| %>
+	<% if f.conversation.nil? %>
+	<li><%= display_main_photo_thumb(f.sender.profile) %> 
+		<%= link_to truncate(f.body, length: 30), f %>
+	</li>
 	<% end %>
-	</ul>
 <% end %>
+</ul>
 
-<% unless @sent_messages.empty? %>
-	<h2>All sent messages</h2>
-	<ul class="sent_messages">
-	<% @sent_messages.each do |f| %>
-		<li><%= f.title %>: <%= link_to truncate(f.body, length: 30), f %></li>
-	<% end %>
-	</ul>
 <% end %>
