--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -47,21 +47,5 @@
 
 <% end %>
 <% unless current_user.profile == @profile %>
-	<h3 class= "message">Send a private message to <%= @profile.nick_name %></h3><br>
-	<div class="send_message">
-	<%= form_for PrivateMessage.new, html: { class: "well form-inline" } do |f| %>
-		<%= f.hidden_field :receiver_id, value: @profile.user_id %>
-	  <div class="field">
-	    <%= f.label :title, "Title" %><br />
-	    <%= f.text_field :title %>
-	  </div>
-	  <div class="field">
-	    <%= f.label :body, "Message Body" %><br />
-	    <%= f.text_area :body, class: "input-xlarge" %>
-	  </div>
-	  <div class="actions">
-	    <%= f.submit 'Send Message!' %>
-	  </div>
-	<% end %>
-	</div>
+	<%= render 'shared/send_message', object: @profile %>
 <% end %>
