--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,8 @@
 
 <h1>Listing users</h1>
 
+<%= will_paginate %>
+
 <table>
   <tr>
     <th>Name</th>
@@ -34,5 +36,6 @@
 </table>
 
 <br />
+<%= will_paginate %>
 
 <%= link_to 'New User', new_user_path %>
