--- a/app/views/private_messages/index.html.erb
+++ b/app/views/private_messages/index.html.erb
@@ -2,9 +2,9 @@
 	<h2>:( You don't have any conversations in your inbox.  Why don't you message someone?</h2>
 <% else %>
 
-<h2>All Conversations:</h2>
+<h2>All Conversations</h2>
 <ul class="conversations">
-<% @received_messages.each do |f| %>
+<% @messages.each do |f| %>
 	<% if f.conversation.nil? %>
 	<li><%= display_main_photo_thumb(f.sender.profile) %> 
 		<%= link_to truncate(f.body, length: 30), f %>
