--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,8 +1,8 @@
 <div class="span3">
   <div class="well sidebar-nav">
-    <h3><%= yield :sidebar_main_title %></h3>
+    <h3><%= content_for?(:sidebar_main_title) ? yield(:sidebar_main_title) : "Sidebar 1" %></h3>
     <ul class="nav nav-list">
-      <li class="nav-header"><%= yield(:sidebar_sub_title) %></li>
+      <li class="nav-header"><%= content_for?(:sidebar_sub_title) ? yield(:sidebar_sub_title) : "Sidebar subtitle" %></li>
         <%= yield :sidebar %>
     </ul>
   </div><!--/.well -->
