Added search model/controller and got it at least somewhat working now I'm going to take a nap

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -33,7 +33,8 @@
 <% end %>
 </h2>
 <span class="profile_header"><%= @profile.age %> / <%= @profile.sex %> /
-<%= @profile.zipcode %> / <%= @profile.relationship_status %></span><br><br>
+<%= @profile.zipcode %> / <%= @profile.relationship_status %> / Interested in: <%= @profile.interested_in %></span>
+<br><br>
 
 <h3>About me:</h3>
 <p><%= @profile.about_me %></p><br>
