--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,116 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-    <% if content_for?(:title) %>
-      <%= yield(:title) %>
-    <% else %>
-      No Fat Chicks
-    <% end %></title>
-    <%= csrf_meta_tags %>
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
-
-    <!-- Le styles -->
-    <%= stylesheet_link_tag "application", :media => "all" %>
-
-    <!-- Le fav and touch icons -->
-    <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
-    <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-    <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
-  </head>
+  <%= render 'layouts/header' %>
   <body>
 
-    <div class="navbar">
-      <div class="navbar-inner">
-          <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <%= link_to "Dating- Home", root_url, class: "brand" %>
-          <div class="container nav-collapse">
-            <ul class="nav">
-                <li><%= link_to "View members!", profiles_path %></li>
-                <li><%= link_to "Contact", contact_url %></li>
-                <li><%= link_to "Blog", '#'  %></li>
-            </ul>
-            <ul class="nav pull-right">
-              <% if signed_in? %>
-                <li>
-                  <% if !current_user.profile.nil? && current_user.profile.valid? %>
-                </li>
-                  <li class="dropdown" id="connections">
-                    <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" 
-                      href="path/to/page.html">
-                      All Connections
-                      <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <%= link_to "View All Connections", '#' %>
-                      <%= link_to "Messages", private_messages_path %>
-                      <%= link_to "Your Favorites", favorites_path %>
-                      <%= link_to "Winks", winks_path %>
-                      <%= link_to "Profiles Viewed", profile_views_path(current_user.profile) %>
-                    </ul>
-                  </li>                          
-                  <li class="dropdown" id="profile">
-                    <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" 
-                      href="path/to/page.html">
-                      Profile
-                      <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <%= link_to "View your profile", current_user.profile %>
-                      <%= link_to "Edit your profile", edit_profile_path(current_user.profile) %>
-                    </ul>
-                  </li>            
-                    <% else %>
-                    <li><%= link_to "Create a Profile", new_profile_path %></li>
-                    <% end %>
-                <li><%= link_to "Sign out", logout_path, method: :delete %></li>
-              <% else %>
-                <li><%= link_to "Sign in", login_path %></li>
-                <li><%= link_to "Sign up?", new_user_path %></li>
-              <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    <%= render 'layouts/navlinks' %>
 
     <div class="container">
-      <% flash.each do |key, value| %>
-      <div class="flash <%= key %>"><%= value %></div>
-      <% end %>
+      <%= render 'layouts/display_flash' %>
     
       <div class="content">
         <div class="row">
-           <div class="span9">
+          <div class="span9">
               <%= yield %>
-            </div>
-            <% if content_for?(:sidebar) %>
-              <%= render 'shared/sidebar' %>
-            <% end %>
-            <% if content_for?(:sidebar2) %>
-              <%= render 'shared/sidebar2' %>
-            <% end %>
+          </div>
+        <%= render 'shared/sidebar' if content_for?(:sidebar) %>
+        <%= render 'shared/sidebar2' if content_for?(:sidebar2) %>
         </div><!--/row-->
       </div><!--/content-->
           <br>
-      <footer>
-        <p><strong>&copy; Dating Site 2012</strong></p>
-        <li><%= link_to "Contact", contact_path  %></li>
-        <li><%= link_to "About", about_path  %></li>
-        <li><%= link_to "Help",  help_path  %></li>        
-      </footer>
+      <%= render 'layouts/footer' %>
 
     </div> <!-- /container -->
 
