Added a bunch of crap for the home page, fixed private messages as well I think for good

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,4 +28,21 @@ ul.profile_list > li {
 	list-style: none
 }
 
+.number_select {
+	width: 55px;
+}
+
+li {
+	list-style: none;
+}
+
+ul.feed_items {
+	
+}
+
+
+
+
+
+
 
