--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     
       <div class="content">
         <div class="row">
-          <div class="span9">
+          <div class="span8"><!-- originally span9 if something goes wrong -->
               <%= yield %>
           </div>
         <%= render 'shared/sidebar' if content_for?(:sidebar) %>
