home page mostly working, some N+1 query problems (also on some other places, need to research

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,8 +36,20 @@ li {
 	list-style: none;
 }
 
+
 ul.feed_items {
-	
+	margin: 10px 0 0 0;
+
+	  li {
+	    padding: 5px 0;
+	    border-top: 1px solid #e8e8e8;
+	  }
+
+	  .timestamp {
+	  	font-style: italic;
+	  	font-size: 80%;
+	  	color: gray; 
+	  }
 }
 
 
