--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,10 +1,10 @@
 <% title("View all profiles!") %>
-
+<% sidebar_main_title("Preferences Form") %>
+<% sidebar_sub_title("Select criteria") %>
+<% sidebar2_main_title("Newest members that fit your criteria") %>
+<% sidebar2_sub_title("greet them kindly!") %>
 <% content_for :sidebar do %>
-  <%= @side_profiles.count %> Profiles <br>
-  <%= link_to "Test1", '#' %><br>
-  <%= link_to "Test1", '#' %><br>
-  <%= link_to "Test1", '#' %><br>
+	<%= render 'shared/search', object: @search %>
 <% end %>
 
 
