--- a/app/views/feed_items/_wink.html.erb
+++ b/app/views/feed_items/_wink.html.erb
@@ -1,2 +1,3 @@
-<span class="newsfeed">Wink with <%= object.sender.nick_name %></span>
+<span class="photo_mini"><%= display_other_photo_wink(object) %></span>
+<span class="newsfeed"><%= correct_winker(object) %></span>
 <span class="timestamp"><%= time_ago_in_words(object.created_at) %> ago.</span>
