--- a/app/views/feed_items/_favorite.html.erb
+++ b/app/views/feed_items/_favorite.html.erb
@@ -1,2 +1,3 @@
-<span class="newsfeed">Favorited <%= object.favoriter.nick_name %></span>
+<span class="photo_mini"><%= display_other_photo_favorite(object) %></span>
+<span class="newsfeed"><%= correct_favoriter(object) %></span>
 <span class="timestamp"><%= time_ago_in_words(object.created_at) %> ago.</span>
