--- a/app/views/feed_items/_private_message.html.erb
+++ b/app/views/feed_items/_private_message.html.erb
@@ -1,2 +1,3 @@
-<span class="newsfeed">Private Message with <%= object.sender.nick_name %></span>
+<span class="photo_mini"><%= display_other_photo_message(object) %></span>
+<span class="newsfeed"><%= correct_messager(object) %></span>
 <span class="timestamp"><%= time_ago_in_words(object.created_at) %> ago.</span>
