--- a/app/views/feed_items/_view.html.erb
+++ b/app/views/feed_items/_view.html.erb
@@ -1,2 +1,3 @@
-<span class="newsfeed">View with <%= object.viewer.nick_name %></span>
+<span class="photo_mini"><%= display_other_photo_view(object) %></span>
+<span class="newsfeed"><%= correct_viewer(object) %></span>
 <span class="timestamp"><%= time_ago_in_words(object.created_at) %> ago.</span>
