--- a/app/views/layouts/_navlinks.html.erb
+++ b/app/views/layouts/_navlinks.html.erb
@@ -9,7 +9,7 @@
       <%= link_to "Dating- Home", root_url, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
-            <li><%= link_to "View members!", profiles_path %></li>
+            <li><%= link_to "Search For Matches!", new_search_path %></li>
             <li><%= link_to "Contact", contact_url %></li>
             <li><%= link_to "Blog", '#'  %></li>
         </ul>
@@ -25,7 +25,7 @@
                   <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <%= link_to "View All Connections", '#' %>
+                  <%= link_to "View All Connections", root_path %>
                   <%= link_to "Messages", private_messages_path %>
                   <%= link_to "Your Favorites", favorites_path %>
                   <%= link_to "Winks", winks_path %>
