--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -4,6 +4,10 @@
     <%= f.text_field :keywords, { class: "search_input" } %>
   </div>
   <div class="field">
+    <%= f.label :sex, "I am a #{current_user.profile.sex} looking for: " %><br />
+    <%= f.select :sex, Profile::INTERESTED_TYPES, { include_blank: true }, { class: "interested_in" } %>
+  </div>  
+  <div class="field">
     <%= f.label :interested_in %><br />
     <%= f.select :interested_in, Profile::INTERESTED_TYPES, { include_blank: true }, { class: "interested_in" } %>
   </div>
